Correct showJumpToOnScroll function

--- a/sass/sections/_contact.scss
+++ b/sass/sections/_contact.scss
@@ -141,7 +141,7 @@
                         height: 20px;
                         width: 20px;
                         margin-top: 2px;
-                        border: 1px solid #b3b7b4;
+                        border: 1px solid $darkgrey;
                         background-color: #fff;
                         text-align: center;
                         flex-shrink: 0;
